# fastext

./: .gitignore  LICENSE  README.md  latest.json  package.json
.github/workflows/: release.yml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns  icon.psd
src-tauri/src/: constants.rs  main.rs
src-tauri/src/commands/: app_commands.rs  file_commands.rs  mod.rs  shell_commands.rs  updater_commands.rs
src-tauri/src/dialog/: mod.rs
src-tauri/src/file_ops/: mod.rs
src/css/: styles.css
src/js/: config-manager.js  dialog-helper.js  editor.js  file-manager.js  main.js  markdown-preview.js  settings-manager.js  status-bar.js  tab-manager.js  tauri-loader.js  theme-manager.js  window-manager.js
