[package]
name = "fastext"
version = "1.0.0"
description = "Editor de texto minimalista y de alto rendimiento"
authors = ["Gabriel Romero"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-message", "shell-open", "dialog-open", "dialog-save", "fs-read-file", "fs-write-file", "updater"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
